--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Shoes#index</h1>
-<p>Find me in app/views/shoes/index.html.erb</p>
+<ul>
+  <% @shoes.each do |shoe| %>
+  <li>
+    <h3><%= shoe.title %></h3>
+    <p><%= shoe.description %></p>
+  </li>
+  <% end %>
+
+</ul>
