--- a/app/views/shoes/new.html.erb
+++ b/app/views/shoes/new.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :description %>
     <%= f.input :sizes %>
     <%= f.input :price %>
-    <%= f.input :img_url %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit %>
   <% end %>
 </div>
